feat(release): new release strategy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,8 @@ on:
   push:
     branches:
       - master
-      - beta
-      - alpha
       - staging
+      - integration
 jobs:
   release:
     name: Release
